<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.vamshedhar.contacts.DisplayContactActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/dvProfilePic"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@drawable/default_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"
                        android:text="Full Name"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/dvPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"
                        android:text="+19xxxxxxx77"
                        android:textSize="18sp"
                        android:onClick="onCallClick"/>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/dvcompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/company"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dvemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/email"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dvurl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/url"
                android:textSize="18sp"
                android:onClick="onLinkClick"/>

            <TextView
                android:id="@+id/dvaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/address"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dvbirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/birthday"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dvnickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/nickName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dvfbURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/facebook"
                android:textSize="18sp"
                android:onClick="onLinkClick"/>

            <TextView
                android:id="@+id/dvtwitterUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/twitter"
                android:textSize="18sp"
                android:onClick="onLinkClick"/>

            <TextView
                android:id="@+id/dvskype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/skype"
                android:textSize="18sp"
                android:onClick="onLinkClick"/>

            <TextView
                android:id="@+id/dvyoutube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/youtube"
                android:textSize="18sp"
                android:layout_marginBottom="30dp"
                android:onClick="onLinkClick" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
